--- a/STANDARD/assets/views/partials/nav.html
+++ b/STANDARD/assets/views/partials/nav.html
@@ -234,7 +234,7 @@
     <!-- Panier -->
     <li ui-sref-active="active">
         <a id="admin" ui-sref="app.GestPers">
-            <div class="item-content">
+            <div class=" hidden item-content">
                 <div class="item-media">
                     <i class="fa  fa-shopping-cart" aria-hidden="true"></i>
                 </div>
