--- a/STANDARD/assets/views/Admin/gestion_produit.html
+++ b/STANDARD/assets/views/Admin/gestion_produit.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-sm-8">
             <h1 class="mainTitle">LISTE DES PRODUITS</h1>
-            <span class="mainDescription">Use this page to start from scratch and put your custom content</span>
+            <span class="mainDescription"></span>
         </div>
         <div ncy-breadcrumb></div>
     </div>
@@ -13,10 +13,10 @@
     <div class="container-fluid container-fullw">
         <div class="row">
             <div class="col-md-12">
-                <h5 class="over-title margin-bottom-15">Striped <span class="text-bold">rows</span></h5>
-                <p>
+                <h5 class="over-title margin-bottom-15">La liste des <span class="text-bold">Produits</span></h5>
+                <!-- <p>
                     Use <code>.table-striped</code> to add zebra-striping to any table row within the <code>&lt;tbody&gt;</code>.
-                </p>
+                </p> -->
                 <!-- <p><strong>Data Length : {{categories.length}}</strong></p> -->
                 <table class="table table-striped table-hover" id="sample-table-2" ng-if="produits.length > 0">
                     <thead>
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="pull-right">
-                            <button class="btn btn-success" ng-click="ajouterProduit('left')">Add Produit
+                            <button class="btn btn-success" ng-click="ajouterProduit('left')">Ajouter Produit
                             </button>
                             <!-- <button class="btn btn-success" ng-click="ajouterCategorie('left')">Add Categorie
                             </button> -->
@@ -139,7 +139,7 @@
 
                     <div class="form-group">
                         <label for="designation">Designation Produit</label>
-                        <input ng-model="DESIGNATION" type="text" id="designation" ng-init="DESIGNATION ='MyDesignation'" class="form-control" />
+                        <input ng-model="DESIGNATION" type="text" id="designation" class="form-control" placeholder="Designation Produit" />
                     </div>
                     <!-- <div class="form-group">
                         <label for="categorie">Categorie</label>
@@ -159,8 +159,8 @@
                         </div> -->
 
                     <div class="form-group" ng-init="GetCatg()">
-                        <label class="invisible" for="form-field-select-1">
-									Skin Slide with Icons
+                        <label class="visible" for="form-field-select-1">
+									Categorie
                                             </label>
 
                         <select ng-change="changed(MyCatg)" ng-options="categorie.DESGINATION_CAT for categorie in cated track by categorie.ID_CATEGORIE" ng-model="MyCatg" class="cs-select cs-skin-slide">
@@ -169,7 +169,7 @@
 
                     <div class="form-group">
                         <label for="prix">Prix</label>
-                        <input ng-model="prix" type="text" ng-init="PRIX ='250'" id="prix" class="form-control" />
+                        <input ng-model="prix" type="text" id="prix" placeholder="Prix" class="form-control" />
                     </div>
 
 
