--- a/STANDARD/assets/views/ServiceProductions/cmdalivr.html
+++ b/STANDARD/assets/views/ServiceProductions/cmdalivr.html
@@ -22,7 +22,7 @@
                             <th>#</th>
                             <th>Date Commande</th>
                             <th>Nombre Articles</th>
-                            <th>ID CLIENT </th>
+                            <th class="hidden">ID CLIENT </th>
                             <th>Confirmation</th>
                         </tr>
                     </thead>
@@ -31,7 +31,7 @@
                             <td>{{x.ID_COMMANDE}}</td>
                             <td>{{x.DD_COMMANDE}}</td>
                             <td>{{x.QTE}}</td>
-                            <td>{{x.ID_CLIENT}}</td>
+                            <td class="hidden">{{x.ID_CLIENT}}</td>
                             <td>
                                 <button type="button" class="btn btn-primary btn-block btn-scroll btn-scroll-top ti-arrow-right" ng-click="fini($index,x)">
                                             <span>Confirmer</span>
