--- a/STANDARD/assets/views/ServiceProductions/cmdaprep.html
+++ b/STANDARD/assets/views/ServiceProductions/cmdaprep.html
@@ -1,4 +1,4 @@
-<!-- start: PAGE TITLE --> 
+<!-- start: PAGE TITLE -->
 <section id="page-title" class="page-title-center">
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
@@ -11,49 +11,51 @@
 <!-- end: PAGE TITLE -->
 <!-- start: YOUR CONTENT HERE -->
 <!-- start: YOUR CONTENT HERE -->
-<div class="container" ng-controller="MyCtrl" >
-        <div class="row">
-            <div class="col-md-12">
-                <div class="table-responsive"  >
-                    <table class="table table-striped table-hover" id="sample-table-2" ng-init="show_cmdaprep()" >
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Date Commande</th>
-                                <th>Nombre Articles</th>
-                                <th>Confirmation</th>
-                            </tr>
-                        </thead>
-                        <tbody >
-                            <tr  ng-repeat="x in names | filter:searchText ">
-                                <td>{{x.ID_COMMANDE}}</td>
-                                <td>{{x.DD_COMMANDE}}</td>
-                                <td>{{x.QTE}}</td>
-                                <td>
-                                    <button type="button" class="btn btn-primary btn-block btn-scroll btn-scroll-top ti-arrow-right" ng-click="preparation('right',x)">
+<div class="container" ng-controller="MyCtrl">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover" id="sample-table-2" ng-init="show_cmdaprep()">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Date Commande</th>
+                            <th>Nombre Articles</th>
+                            <th class="hidden">ID CLIENT </th>
+                            <th>Confirmation</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="x in names | filter:searchText ">
+                            <td>{{x.ID_COMMANDE}}</td>
+                            <td>{{x.DD_COMMANDE}}</td>
+                            <td>{{x.QTE}}</td>
+                            <td class="hidden">{{x.ID_CLIENT}}</td>
+                            <td>
+                                <button type="button" class="btn btn-primary btn-block btn-scroll btn-scroll-top ti-arrow-right" ng-click="preparation('right',x)">
                                         <span>Confirmer</span>
-                                    </button>
-                                </td>
-                                
-                                
-                                <script type="text/ng-template" id="asideContent.html"  >
-                                    <div class="modal-header">
+                                </button>
+                            </td>
+
+
+                            <script type="text/ng-template" id="asideContent.html">
+                                <div class="modal-header">
                                     <h3 class="modal-title">Confirmation de Commande</h3>
-                                    </div>
-                                    <div   class="modal-body" >
-                                    Voulez Vous Vraiment Confirmer Cette Commande?   
-                                    </div>
-                                    <div class="modal-footer">
+                                </div>
+                                <div class="modal-body">
+                                    Voulez Vous Vraiment Confirmer Cette Commande?
+                                </div>
+                                <div class="modal-footer">
                                     <button class="btn btn-primary" ng-click="ok($event)">Oui</button>
                                     <button class="btn btn-primary" ng-click="cancel($event)">Annuler</button>
-                                    </div>
-                                </script>
-                            </tr>   
+                                </div>
+                            </script>
+                        </tr>
 
-                        </tbody>
-                    </table>
-                </div>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-    <!-- end: YOUR CONTENT HERE
+</div>
+<!-- end: YOUR CONTENT HERE
