--- a/STANDARD/assets/views/ServiceProductions/RecuProd.html
+++ b/STANDARD/assets/views/ServiceProductions/RecuProd.html
@@ -119,7 +119,7 @@
                     </tbody>
                 </table>
                 <div align="right">
-                    <button type="submit" ui-sref="app.cmdp" class="btn btn-o btn-danger">Retour</button>
+                    <button type="submit" ui-sref="app.cmdl" class="btn btn-o btn-danger">Retour</button>
                     <button type="submit" ng-click="SP_Prete()" class="btn btn-o btn-info">Confirmer</button>
 
                 </div>
