--- a/STANDARD/assets/views/Livreur/panier.html
+++ b/STANDARD/assets/views/Livreur/panier.html
@@ -1,4 +1,3 @@
-
 <!-- start: PAGE TITLE -->
 <section id="page-title" class="page-title-center">
     <div class="row">
@@ -14,18 +13,18 @@
 <div class="container " ng-controller="MyCtrl">
     <div class="row">
         <div class="col-md-12">
-            <div  ng-controller="vAccordionCtrl" class="panel-body">
-                        <v-accordion  class="vAccordion--default" control="firstAccordionControl">
-                            <v-pane ng-repeat="pane in allcat" expanded="$last">
-                                <v-pane-header>
-                                    <h5>{{ pane.DESGINATION_CAT }}</h5>
-                                </v-pane-header>
-                                <v-pane-content>
-                                    <!-- <p>
+            <div ng-controller="vAccordionCtrl" class="panel-body">
+                <v-accordion class="vAccordion--default" control="firstAccordionControl">
+                    <v-pane ng-repeat="pane in allcat" expanded="$last">
+                        <v-pane-header>
+                            <h5>{{ pane.DESGINATION_CAT }}</h5>
+                        </v-pane-header>
+                        <v-pane-content>
+                            <!-- <p>
                                         {{ pane.DESGINATION_CAT }}
                                     </p> -->
-                                   
-                                    <!-- <v-accordion ng-if="pane.subpanes">
+
+                            <!-- <v-accordion ng-if="pane.subpanes">
                                         <v-pane ng-repeat="subpane in pane.subpanes">
                                             <v-pane-header>
                                                 <h5>{{ subpane.ID_CATEGORIE }}</h5>
@@ -38,83 +37,83 @@
                                         </v-pane>
                                     </v-accordion> -->
 
-                                    <table class="table table-striped table-hover" id="sample-table-2" ng-init="show_cmdacollecter('null')">
-                                    <thead>
-                                        <tr >
-                                            <th>#</th>
-                                            <th>Designation</th>
-                                            <th>Prix</th>
-                                            <!-- <th>Categorie</th> -->
-                                            <th class="center">Commander</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr ng-repeat="p in allproducts | filter:searchText   ">
-                                            <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE" >
-                                                <a href="#">
+                            <table class="table table-striped table-hover" id="sample-table-2" ng-init="show_cmdacollecter('null')">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Designation</th>
+                                        <th>Prix</th>
+                                        <!-- <th>Categorie</th> -->
+                                        <th class="center">Commander</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="p in allproducts | filter:searchText   ">
+                                        <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE">
+                                            <a href="#">
                                             {{p.ID_PRODUIT}}
                                         </a></td>
-                                            <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE" >{{p.DESIGNATION}}</td>
-                                            <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE" >{{p.PRIX}}</td>
-                                            <!-- <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE">{{p.DESGINATION_CAT}}</td> -->
-                                            <td class="center" ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE"> 
-                                                <button type="button" class="btn btn-wide btn-o btn-primary" ng-click="addToCart(p)">
+                                        <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE">{{p.DESIGNATION}}</td>
+                                        <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE">{{p.PRIX}}</td>
+                                        <!-- <td ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE">{{p.DESGINATION_CAT}}</td> -->
+                                        <td class="center" ng-if="pane.ID_CATEGORIE === p.ID_CATEGORIE">
+                                            <button type="button" class="btn btn-wide btn-o btn-primary" ng-click="addToCart(p)">
                                                 <span class="fa fa-plus">
 
                                                 </span>
                                             </button>
-                                            </td>
-                                            
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <button type="button" class="btn btn-wide btn-success" ng-click="myallproducts('lg')">
+                                        </td>
+
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <button type="button" class="btn btn-wide btn-success" ng-click="myallproducts('lg')">
                                 Mon Panier
                             </button>
-                                <script type="text/ng-template" id="asideContent1.html" ng-controller="MyCtrl">
-                                    <div class="modal-header">
-                                        <h3 class="modal-title">Mon Panier</h3>
-                                    </div>
-                                    <div class="modal-body">
-                                        <table ng-table="tableParams" class="table">
-                                            <tr>
-                                                <td>#</td>
-                                                <td>Designation</td>
-                                                <td>Prix</td>
-                                                <td>Quantite</td>
-                                                <td>Total</td>
-                                                <td>Effacer</td>
-                                            </tr>
-                                            <tr ng-repeat="c in cart">
-                                                <td>{{c.ID_PRODUIT}}</td>
-                                                <td> {{c.DESIGNATION}} </td>
-                                                <td> {{c.PRIX}} </td>
-                                                <td>{{c.count}}</td>
-                                                <td>{{c.count*c.PRIX | currency}}</td>
-                                                <td>
-                                                    <button type="button" class="btn btn-wide btn-o btn-danger" ng-click="removeItemCart(c)">
+                            <script type="text/ng-template" id="asideContent1.html" ng-controller="MyCtrl">
+                                <div class="modal-header">
+                                    <h3 class="modal-title">Mon Panier</h3>
+                                </div>
+                                <div class="modal-body">
+                                    <table ng-table="tableParams" class="table">
+                                        <tr>
+                                            <td>#</td>
+                                            <td>Designation</td>
+                                            <td>Prix</td>
+                                            <td>Quantite</td>
+                                            <td>Total</td>
+                                            <td>Effacer</td>
+                                        </tr>
+                                        <tr ng-repeat="c in cart">
+                                            <td>{{c.ID_PRODUIT}}</td>
+                                            <td> {{c.DESIGNATION}} </td>
+                                            <td> {{c.PRIX}} </td>
+                                            <td>{{c.count}}</td>
+                                            <td>{{c.count*c.PRIX | currency : "MAD"}}</td>
+                                            <td>
+                                                <button type="button" class="btn btn-wide btn-o btn-danger" ng-click="removeItemCart(c)">
                                                     <span class="fa fa-minus">
 
                                                     </span>
                                                 </button>
-                                                </td>
+                                            </td>
 
-                                            </tr>
-                                            Total : {{total | currency}}
-                                        </table>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-primary" ng-click="ok($event)">Ajouter Au Panier</button>
-                                        <button class="btn btn-primary" ng-click="cancel($event)">Annuler</button>
-                                    </div>
-                                </script>
+                                        </tr>
+                                        Total : {{total | currency :"MAD"}}
+                                    </table>
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-primary" ng-click="ok($event)">Ajouter Au Panier</button>
+                                    <button class="btn btn-primary" ng-click="cancel($event)">Annuler</button>
+                                </div>
+                            </script>
 
-                                </v-pane-content>
-                            </v-pane>
-                        </v-accordion>
-                    </div>
-         
-           <!--  <div class="table-responsive">
+                        </v-pane-content>
+                    </v-pane>
+                </v-accordion>
+            </div>
+
+            <!--  <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="sample-table-1" ng-init="show_cmdacollecter('null')">
                     <thead>
                         <tr>
