--- a/STANDARD/assets/views/ServiceProductions/cmdaprep.html
+++ b/STANDARD/assets/views/ServiceProductions/cmdaprep.html
@@ -19,6 +19,7 @@
                     <thead>
                         <tr>
                             <th>#</th>
+                            <th>Nom et Prenom Client</th>
                             <th>Date Commande</th>
                             <th>Nombre Articles</th>
                             <th class="hidden">ID CLIENT </th>
@@ -28,6 +29,7 @@
                     <tbody>
                         <tr ng-repeat="x in names | filter:searchText ">
                             <td>{{x.ID_COMMANDE}}</td>
+                            <td>{{x.NOM_CLIENT}} {{x.PRENOM_CLIENT}}</td>
                             <td>{{x.DD_COMMANDE}}</td>
                             <td>{{x.QTE}}</td>
                             <td class="hidden">{{x.ID_CLIENT}}</td>
